--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 </head>
 
 <body>
+
+  <div id="boot">
+    <div class="boot-terminal">
+      <div class="terminal-header">VXL_OS v2.6.0_NETHERITE</div>
+      <div class="boot-text"></div>
+      <div class="cursor">_</div>
+    </div>
+  </div>
+  
 <!-- HERO / LANDING -->
 <section id="hero">
   <canvas id="hero-canvas"></canvas>
