--- a/pages/admin.html
+++ b/pages/admin.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../styles.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <script src="../main.js" defer></script>
 </head>
 
 <body class="admin-mode">
