--- a/pages/events.html
+++ b/pages/events.html
@@ -19,6 +19,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="../main.js" defer></script>
 </head>
 
 <body style="background: #050505; padding-top: 80px;">
