--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
 
 <body>
 
+  <nav id="side-nav">
+    <div class="nav-line"></div>
+    <ul>
+      <li><a href="#hero" class="nav-link" data-target="hero">START</a></li>
+      <li><a href="#ongoing" class="nav-link" data-target="ongoing">PROJECTS</a></li>
+      <li><a href="#resources" class="nav-link" data-target="resources">RESOURCES</a></li>
+      <li><a href="#about" class="nav-link" data-target="about">ABOUT</a></li>
+      <li><a href="#contact" class="nav-link" data-target="contact">CONTACT</a></li>
+    </ul>
+  </nav>
+
   <div id="boot">
     <div class="boot-terminal">
       <div class="terminal-header">CONVERGENT ORDER_OS v4.1.8</div>
@@ -144,9 +155,10 @@
         "An auxiliary in milliards...  in lasting presence, in vast consequence."
       </i>
       </p>
-      <p><b>
-        Translating profound narratives into visceral 3D experiences.
-        From voxel to vision, we render stories to fruition.
+      <br>
+        Voxel Animation is a collective founded by a small group of animators and filmmakers, that aims to reach the hearts of audiences through avant-garde storytelling.
+        <br>Translating profound narratives into visceral 3D experiences.</b>
+        <br>From voxel to vision, we render stories to fruition.</br>
       </b>
       </p>
     </div>
