--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="boot-text"></div>
       <div class="cursor">_</div>
   
-      <div class="skip-hint">PRESS ANY KEY TO SKIP >></div>
+      <div class="skip-hint">PRESS ANY KEY TO PROCEED >></div>
     </div>
   </div>
 
