--- a/pages/store.html
+++ b/pages/store.html
@@ -24,14 +24,24 @@
     <script src="../main.js" defer></script>
 
     <style>
-        /* PAGE SPECIFIC: Video Overlay */
+        /* 3D Background Container */
+        #canvas-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background-color: #050505;
+        }
+
+        /* Video Overlay */
         #video-overlay {
             position: fixed;
             inset: 0;
             background: rgba(0, 0, 0, 0.95);
             z-index: 9999;
             display: none;
-            /* Hidden by default */
             flex-direction: column;
             align-items: center;
             justify-content: center;
@@ -59,7 +69,7 @@
             color: var(--cyber-cyan);
         }
 
-        /* Play Button Overlay on Card */
+        /* Play Button Overlay */
         .play-overlay {
             position: absolute;
             top: 50%;
@@ -79,7 +89,7 @@
             transform: translate(-50%, -50%) scale(1.1);
         }
 
-        /* FILTER BUTTON STYLES */
+        /* Filter Buttons */
         .filter-btn {
             margin: 0 0.5rem;
             background: transparent;
@@ -127,6 +137,8 @@
 
 <body>
 
+    <div id="canvas-container"></div>
+
     <div id="video-overlay">
         <button class="close-btn" onclick="closeVideo()">×</button>
         <video id="store-video" controls loop>
@@ -152,22 +164,18 @@
         </div>
 
         <div class="gallery">
-
             <div class="gallery-item rig" onclick="playPreview(this)" data-video="../assets/videos/runtestnewmsa.mp4"
                 data-title="Generic Humanoid Rig v2">
-
                 <div
                     style="height: 200px; background: #1a1a1a; display: flex; align-items: center; justify-content: center; border-bottom: 1px solid rgba(255,255,255,0.1); position: relative; overflow: hidden;">
                     <img src="../assets/images/v12.png" alt="Rig V1 Preview"
                         style="width: 100%; height: 100%; object-fit: cover; opacity: 0.8;">
                     <i class="fa-solid fa-play play-overlay"></i>
                 </div>
-
                 <div style="padding: 1.5rem;">
                     <h3 style="color: var(--text-main); margin-bottom: 0.5rem;">Generic Humanoid Rig v2</h3>
-                    <p style="color: #888; font-size: 0.9rem; margin-bottom: 1.5rem;">
-                        Standard bipedal rig. IK/FK switch included.
-                    </p>
+                    <p style="color: #888; font-size: 0.9rem; margin-bottom: 1.5rem;">Standard bipedal rig. IK/FK switch
+                        included.</p>
                     <div style="display: flex; justify-content: space-between; align-items: center;">
                         <span style="color: var(--cyber-cyan); font-weight: bold;">FREE</span>
                         <button class="resource-item" style="width: auto; padding: 0.5rem 1rem;">PREVIEW</button>
@@ -177,18 +185,14 @@
 
             <div class="gallery-item env" onclick="playPreview(this)"
                 data-video="../assets/videos/product_placeholder.mp4" data-title="Cyber City Pack">
-
                 <div
                     style="height: 200px; background: #1a1a1a; display: flex; align-items: center; justify-content: center; border-bottom: 1px solid rgba(255,255,255,0.1); position: relative;">
                     <i class="fa-solid fa-city" style="font-size: 3rem; color: #333;"></i>
                     <i class="fa-solid fa-play play-overlay"></i>
                 </div>
-
                 <div style="padding: 1.5rem;">
                     <h3 style="color: var(--text-main); margin-bottom: 0.5rem;">Cyber City Pack</h3>
-                    <p style="color: #888; font-size: 0.9rem; margin-bottom: 1.5rem;">
-                        Low-poly modular building kit.
-                    </p>
+                    <p style="color: #888; font-size: 0.9rem; margin-bottom: 1.5rem;">Low-poly modular building kit.</p>
                     <div style="display: flex; justify-content: space-between; align-items: center;">
                         <span style="color: var(--cyber-cyan); font-weight: bold;">$15.00</span>
                         <button class="resource-item" style="width: auto; padding: 0.5rem 1rem;">PREVIEW</button>
@@ -198,34 +202,27 @@
 
             <div class="gallery-item rig" onclick="playPreview(this)"
                 data-video="../assets/videos/product_placeholder.mp4" data-title="Mecha-01">
-
                 <div
                     style="height: 200px; background: #1a1a1a; display: flex; align-items: center; justify-content: center; border-bottom: 1px solid rgba(255,255,255,0.1); position: relative;">
                     <i class="fa-solid fa-robot" style="font-size: 3rem; color: #333;"></i>
                     <i class="fa-solid fa-play play-overlay"></i>
                 </div>
-
                 <div style="padding: 1.5rem;">
                     <h3 style="color: var(--text-main); margin-bottom: 0.5rem;">Mecha-01</h3>
-                    <p style="color: #888; font-size: 0.9rem; margin-bottom: 1.5rem;">
-                        Fully textured combat mech.
-                    </p>
+                    <p style="color: #888; font-size: 0.9rem; margin-bottom: 1.5rem;">Fully textured combat mech.</p>
                     <div style="display: flex; justify-content: space-between; align-items: center;">
                         <span style="color: var(--cyber-cyan); font-weight: bold;">$25.00</span>
                         <button class="resource-item" style="width: auto; padding: 0.5rem 1rem;">PREVIEW</button>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
 
-    <footer>
-        ©2026 VOXEL SUPPLY DEPOT.
-    </footer>
+    <footer>©2026 VOXEL SUPPLY DEPOT.</footer>
 
     <script>
-        // 1. VIDEO PLAYER LOGIC
+        // VIDEO & FILTER LOGIC (UNCHANGED)
         const overlay = document.getElementById('video-overlay');
         const videoPlayer = document.getElementById('store-video');
         const videoTitle = document.getElementById('video-title');
@@ -233,7 +230,6 @@
         function playPreview(element) {
             const videoSrc = element.getAttribute('data-video');
             const title = element.getAttribute('data-title');
-
             if (videoSrc) {
                 videoPlayer.src = videoSrc;
                 videoTitle.innerText = "PREVIEW: " + title;
@@ -241,37 +237,27 @@
                 videoPlayer.play();
             }
         }
-
         function closeVideo() {
             overlay.style.display = 'none';
             videoPlayer.pause();
             videoPlayer.src = "";
         }
+        overlay.addEventListener('click', (e) => { if (e.target === overlay) closeVideo(); });
 
-        overlay.addEventListener('click', (e) => {
-            if (e.target === overlay) closeVideo();
-        });
-
-        // 2. FILTER LOGIC (Fixing the Buttons)
-        filterSelection("all"); // Execute on load
-
+        filterSelection("all");
         function filterSelection(c) {
             var x, i;
             x = document.getElementsByClassName("gallery-item");
             if (c == "all") c = "";
-
-            // Loop through all items
             for (i = 0; i < x.length; i++) {
                 removeClass(x[i], "show");
                 if (x[i].className.indexOf(c) > -1) {
                     addClass(x[i], "show");
-                    x[i].style.display = "block"; // Make visible
+                    x[i].style.display = "block";
                 } else {
-                    x[i].style.display = "none"; // Hide
+                    x[i].style.display = "none";
                 }
             }
-
-            // Update Button Active State
             var btnContainer = document.getElementById("filter-container");
             var btns = btnContainer.getElementsByClassName("filter-btn");
             for (var i = 0; i < btns.length; i++) {
@@ -281,8 +267,6 @@
                 }
             }
         }
-
-        // Helper functions for classes
         function addClass(element, name) {
             var arr1 = element.className.split(" ");
             var arr2 = name.split(" ");
@@ -290,7 +274,6 @@
                 if (arr1.indexOf(arr2[i]) == -1) { element.className += " " + arr2[i]; }
             }
         }
-
         function removeClass(element, name) {
             var arr1 = element.className.split(" ");
             var arr2 = name.split(" ");
@@ -303,6 +286,133 @@
         }
     </script>
 
+    <script type="importmap">
+        {
+            "imports": {
+                "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+                "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+            }
+        }
+    </script>
+
+    <script type="module">
+        import * as THREE from 'three';
+        import { EffectComposer } from 'three/addons/postprocessing/EffectComposer.js';
+        import { RenderPass } from 'three/addons/postprocessing/RenderPass.js';
+        import { UnrealBloomPass } from 'three/addons/postprocessing/UnrealBloomPass.js';
+
+        // 1. SETUP SCENE
+        const scene = new THREE.Scene();
+        scene.fog = new THREE.FogExp2(0x050505, 0.04); // Heavier fog to blend distance
+
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.z = 5;
+
+        const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.toneMapping = THREE.ReinhardToneMapping;
+        document.getElementById('canvas-container').appendChild(renderer.domElement);
+
+        // 2. POST-PROCESSING (BLOOM)
+        const renderScene = new RenderPass(scene, camera);
+        // Strength, Radius, Threshold
+        const bloomPass = new UnrealBloomPass(new THREE.Vector2(window.innerWidth, window.innerHeight), 1.5, 0.4, 0.85);
+        bloomPass.strength = 1.0;
+        bloomPass.radius = 0.8;
+        bloomPass.threshold = 0.1;
+
+        const composer = new EffectComposer(renderer);
+        composer.addPass(renderScene);
+        composer.addPass(bloomPass);
+
+        // 3. CREATE VOXELS
+        const voxels = [];
+        const geometry = new THREE.BoxGeometry(1, 1, 1); // Standard cube unit
+        const colors = [0x00ffff, 0xff00ff, 0x0055ff, 0x444444]; // Cyan, Magenta, Deep Blue, Grey
+
+        function createVoxel() {
+            // Pick a random color from palette
+            const color = colors[Math.floor(Math.random() * colors.length)];
+
+            const material = new THREE.MeshStandardMaterial({
+                color: 0x111111,
+                emissive: color,
+                emissiveIntensity: Math.random() * 1.5 + 0.5, // Random brightness
+                roughness: 0.1,
+                metalness: 0.8,
+                transparent: true,
+                opacity: 0.8
+            });
+
+            const mesh = new THREE.Mesh(geometry, material);
+
+            // Random Scale (Variation)
+            const s = Math.random() * 0.4 + 0.1; // Size between 0.1 and 0.5
+            mesh.scale.set(s, s, s);
+
+            // Random Position (Wide spread)
+            mesh.position.x = (Math.random() - 0.5) * 25; // Wide horizontally
+            mesh.position.y = (Math.random() - 0.5) * 15; // Tall vertically
+            mesh.position.z = -2 - Math.random() * 8;     // Depth: -2 to -10
+
+            // Random Rotation speed storage
+            mesh.userData = {
+                rotX: (Math.random() - 0.5) * 0.02,
+                rotY: (Math.random() - 0.5) * 0.02,
+                baseY: mesh.position.y,
+                floatSpeed: Math.random() * 0.5 + 0.2,
+                floatOffset: Math.random() * Math.PI * 2
+            };
+
+            scene.add(mesh);
+            voxels.push(mesh);
+        }
+
+        // Generate 50 floating voxels
+        for (let i = 0; i < 50; i++) {
+            createVoxel();
+        }
+
+        // 4. LIGHTING
+        const ambientLight = new THREE.AmbientLight(0x222222);
+        scene.add(ambientLight);
+
+        const pointLight = new THREE.PointLight(0xffffff, 1);
+        pointLight.position.set(0, 5, 5);
+        scene.add(pointLight);
+
+        // 5. ANIMATION LOOP
+        const clock = new THREE.Clock();
+
+        function animate() {
+            requestAnimationFrame(animate);
+            const time = clock.getElapsedTime();
+
+            voxels.forEach(mesh => {
+                // Rotate
+                mesh.rotation.x += mesh.userData.rotX;
+                mesh.rotation.y += mesh.userData.rotY;
+
+                // Float up and down gently
+                mesh.position.y = mesh.userData.baseY + Math.sin(time * mesh.userData.floatSpeed + mesh.userData.floatOffset) * 0.5;
+
+                // Subtle pulse of intensity (optional aesthetic)
+                // mesh.material.emissiveIntensity = 1 + Math.sin(time * 2 + mesh.userData.floatOffset) * 0.5;
+            });
+
+            composer.render();
+        }
+
+        animate();
+
+        // Handle Resize
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            composer.setSize(window.innerWidth, window.innerHeight);
+        });
+    </script>
 </body>
 
 </html>
